src/test/deca/context/invalid/resultats/test_incorrect_methodCall-cont.res
./src/test/deca/context/invalid/test_incorrect_methodCall.deca:23:7: The object on which the method is called is not a class
